# Wiki_Pathfinding

./: CMakeLists.txt  readme.md
backend/: binding.gyp  package-lock.json  package.json  server.js
backend/src/: addon.cpp
src/: Article.cpp  Article.h  WikiImporter.cpp  WikiImporter.h  bfs.h  bfs2.h  dfs.h  dfs2.h  main.cpp
wiki_pathfinder_app/: package-lock.json  package.json
wiki_pathfinding_app/: package-lock.json  package.json  vite.config.js
wiki_pathfinding_app/src/: App.css  App.jsx
wiki_pathfinding_app/src/components/: SearchBar.jsx
